# Nvidia-case

./: .env.example  .gitignore  README.md  plano-nvidia-startup-ai-radar.md  pyproject.toml
config/: activation_playbooks.json  source_registry.json
data/raw_sources/: manifest.json
data/raw_sources/conceptual_ai_native/: concept-crv-ai-wrapper.json  concept-emergence-ai-native-services.json  concept-nvidia-ai-five-layer-cake.json  concept-sequoia-generative-ai-act-o1.json
data/raw_sources/golden_set/: golden-banking-infra-stark-bank.json  golden-computer-vision-noleak-mr-turing.json  golden-devtools-codewhisper.json  golden-fintech-ai-native-cloudwalk-qi-tech.json  golden-healthtech-go-to-market-cydoc.json  golden-healthtech-laura-oncoai.json  golden-wrapper-risk-wuri.json
data/raw_sources/historical_cases/: case-builder-ai.json  case-cloudwalk-infinitepay.json  case-codewhisper.json  case-cydoc.json  case-jasper-ai.json  case-laura.json  case-noleak.json  case-qi-tech.json  case-stark-bank.json  case-wuri.json
data/raw_sources/official_nvidia/: official-ai-enterprise.json  official-clara.json  official-genai-perf.json  official-inception.json  official-llm-cost-blog.json  official-monai.json  official-morpheus.json  official-nemo-framework.json  official-nvidia-nim-llm.json  (+8 more)
docs/: guia-completo-do-case.md  plano-nvidia-startup-ai.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  styles.css
src/nvidia_startup_ai_radar/: __init__.py  agents.py  base_query.py  batch.py  cli.py  config.py  dashboard.py  discovery.py  exporting.py  golden_set_eval.py  graph.py  knowledge_base.py  llm.py  official_sources.py  pipeline.py  product_metrics.py  prompts.py  rag.py  rag_ingestion.py  schemas.py  scraping.py  storage.py  web_api.py
tests/: test_agents_smoke.py  test_base_query.py  test_batch.py  test_observability.py  test_product_web_api.py  test_repository_and_config.py  test_scraping.py
tests/fixtures/: golden_set.json
