[project]
name = "nvidia-startup-ai-radar"
version = "0.1.0"
description = "LangGraph multi-agent pipeline for the NVIDIA Startup AI Radar case."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
  "langgraph==1.2.0",
  "pydantic==2.13.4",
  "python-dotenv==1.2.2",
  "requests==2.33.1",
  "trafilatura==2.1.0",
  "langchain-core==1.4.8",
  "langchain-openai==1.2.1",
  "langchain-nvidia-ai-endpoints==1.4.2",
  "langchain-anthropic==1.4.8",
  "streamlit==1.57.0",
  "reportlab==5.0.0",
  "sentence-transformers==5.6.0",
  "flashrank==0.2.10",
  "playwright==1.61.0",
  "fastapi==0.138.2",
  "uvicorn==0.47.0",
]

[project.optional-dependencies]
dev = [
  "pytest==9.1.1",
]
cohere = [
  "cohere==7.0.5",
]

[project.scripts]
nvidia-radar = "nvidia_startup_ai_radar.cli:main"
nvidia-radar-dashboard = "nvidia_startup_ai_radar.dashboard:launch"
nvidia-radar-web = "nvidia_startup_ai_radar.web_api:launch"

[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
